--- a/style.css
+++ b/style.css
@@ -99,6 +99,8 @@ header {
 }
 
 .switch-button {
+  position: relative;
+  z-index: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   /* display: flex; */
@@ -369,7 +371,7 @@ input[type="checkbox"]:checked
 @media screen and (max-width: 368px) {
 
   main {
-    overflow-x: hidden;
+    overflow: hidden;
     scroll-behavior: smooth;
   }
 
